<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".thirdFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/noteBackbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <EditText
        android:id="@+id/latField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/latFieldText2"
        android:inputType="numberDecimal|numberSigned"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/longiField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/longFieldText2"
        android:inputType="numberDecimal|numberSigned"
        android:minWidth="300dp"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="28dp"
        android:text="@string/updateBtnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longiField" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="28dp"
        android:text="@string/deleteBTNtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/update_button"
        app:layout_constraintTop_toBottomOf="@+id/longiField" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/calculateBtnText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/longiField" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />

    <TextView
        android:id="@+id/latiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latFieldHeader"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="133dp"
        app:layout_constraintBottom_toTopOf="@+id/latField"
        app:layout_constraintStart_toStartOf="@+id/latField"/>

    <TextView
        android:id="@+id/longiText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longFieldHeader"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="209dp"
        app:layout_constraintBottom_toTopOf="@id/longiField"
        app:layout_constraintStart_toStartOf="@+id/longiField"/>


</androidx.constraintlayout.widget.ConstraintLayout>